Add mod settings for reduction speed control and update documentation
- Added ModSettings_ResistanceRestraints and ResistanceRestraintsMod classes for configurable reduction speed multipliers
- Updated CompProperties_ReduceResistanceInBed to use mod settings (Restraining Table, Humiliation Cage, Chemfuel Bath)
- Settings take effect immediately without reloading
- Updated About.xml and README.md with professional formatting
- Clarified auto-release (Sensory Collapser) vs manual release (other devices)
- Documented will reduction, mod settings, and all features

--- a/Source/ResistanceRestraintsMod/ResistanceRestraintsMod.csproj
+++ b/Source/ResistanceRestraintsMod/ResistanceRestraintsMod.csproj
@@ -84,9 +84,11 @@
     <Compile Include="HediffCompProperties_TriggerOnMinSeverity.cs" />
     <Compile Include="HediffCompProperties_WaterSplash.cs" />
     <Compile Include="JobDriver_RemoveImmobility.cs" />
+    <Compile Include="ModSettings_ResistanceRestraints.cs" />
     <Compile Include="PlaceWorker_OnlyInPrisonCell.cs" />
     <Compile Include="PlaceWorker_PreventAdjacentOverlap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResistanceRestraintsMod.cs" />
     <Compile Include="WorkGiver_Warden_RemoveImmobility.cs" />
     <Compile Include="WorkGiver_Warden_StripPawnTortureBed.cs" />
     <Compile Include="WorkGiver_Warden_TakeToTortureBed.cs" />
